[package]
name = "serde_hkx_features"
description = "Havok Behavior (De)Serialization easy-to-use upper wrapper for CLI/GUI"
version.workspace = true
readme.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"], optional = true } # For CLI
encoding_rs_io = "0.1.7"                                              # Read any string
indexmap = { workspace = true }                                       # Ordering HashMap
jwalk = { workspace = true }                                          # To enumarate json class files
parse-display = { workspace = true }                                  # Display derive
similar = { workspace = true }                                        # Create diff
snafu = { workspace = true }                                          # Define all error patterns(with backtrace)
tokio = { workspace = true, features = ["fs", "rt"] }
tracing = { workspace = true, optional = true }

# serde ext
serde_yml = { version = "0.0.12", optional = true }
simd-json = { version = "0.14.2", optional = true }

# workspace members
havok_classes = { workspace = true, features = ["ignore_duplicates"] }
serde_hkx = { workspace = true }


[features]
# default = ["extra_fmt"] # For debug

# For `Format`(Output)
clap = ["dep:clap"]
# Enable tracing logging
tracing = ["dep:tracing", "serde_hkx/tracing"]
# Extra output format(json, toml, yaml)
extra_fmt = [
  "havok_classes/serde",
  "indexmap/serde",
  "dep:serde_yml",
  "dep:simd-json",
]


[lints]
workspace = true
