[package]
name = "serde_hkx_features"
description = "Havok Behavior (De)Serialization easy-to-use upper wrapper for CLI/GUI"
version.workspace = true
readme.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, optional = true }          # For CLI
encoding_rs_io = "0.1.7"                              # Read any string
indexmap = { workspace = true }                       # Ordering HashMap
jwalk = { workspace = true }                          # To enumarate json class files
parse-display = { workspace = true }                  # Display derive
similar = { workspace = true }                        # Create diff
snafu = { workspace = true }                          # Define all error patterns(with backtrace)
tokio = { workspace = true, features = ["fs", "rt"] }
tracing = { workspace = true, optional = true }

# serde ext
schemars = { workspace = true, features = ["indexmap2"], optional = true }
serde = { workspace = true, optional = true }
serde_yml = { version = "0.0.12", optional = true }
simd-json = { version = "0.14.2", optional = true }
toml = { version = "0.8.19", optional = true }

# workspace members
havok_serde = { workspace = true }
havok_classes = { workspace = true, features = ["ignore_duplicates"] }
serde_hkx = { workspace = true }
havok_types = { workspace = true, features = ["serde"], optional = true }


[features]
default = ["extra_fmt"] # For debug
# default = ["json_schema"] # For debug

# For `Format`(Output)
clap = ["dep:clap"]
# Enable tracing logging
tracing = ["dep:tracing", "serde_hkx/tracing"]
# Extra output format(json, toml, yaml)
extra_fmt = [
  "dep:havok_types",
  "dep:serde",
  "dep:serde_yml",
  "dep:simd-json",
  "dep:toml",
  "havok_classes/serde",
  "indexmap/serde",
]

json_schema = ["havok_classes/json_schema", "dep:simd-json", "dep:schemars"]

[lints]
workspace = true
